<resources>
    <string name="app_name">chronofocus-mvp</string>
    <string name="ola_usuario">Olá, Usuário!</string>
    <string name="sessao_hoje">Sessão de Hoje</string>
    <string name="btn_iniciar">INICIAR</string>
    <string name="ver_todas">VER TODAS →</string>
    <string name="hint_nova_materia">Digite o nome da matéria…</string>
    <string name="botao_adicionar">Adicionar Matéria</string>
    <string name="chrono_focus">Chrono Focus</string>
    <string name="entrar">ENTRAR</string>
    <string name="digite_seu_nome">Digite seu nome...</string>
    <string name="materias_de_hoje">Matérias de hoje</string>
    <string name="estudando">ESTUDANDO: %s</string>
    <string name="pausar">Pausar</string>
    <string name="finalizar">Finalizar</string>
    <string name="iniciar">Iniciar</string>
    <string name="deletar_materia">Deletar matéria</string>
    <string name="msg_dlt_materia">Voce deseja mesmo deletar a matéria?</string>
    <string name="sim_msg">Sim</string>
    <string name="nao_msg">Não</string>
    <string name="mat_ria">Matéria</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="title">Title</string>
    <string name="circulo_do_timer">Circulo do timer</string>
    <string name="container_de_tempo">Container de tempo</string>
    <string name="estudar">Estudar</string>
    <string name="sessao">Sessão</string>
    <string name="login">Sessão</string>
    <string name="materias">Matérias</string>
    <string name="criando_materia">Criando Matéria</string>
    <string name="retomar">Retomar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="pr_xima">Próxima</string>
    <string name="sess_o_finalizada">Sessão finalizada!</string>
    <string name="btn_alternar_tema">Alternar Tema</string>
    <string name="btn_voltar">Voltar</string>
    <string name="tema_mudar_para_mono">Mudar para Monocromático</string>
    <string name="tema_mudar_para_lilas">Mudar para Lilás</string>
    <string name="btn_ir_perfil">Perfil</string>
    <string name="titulo_sessoes_dia">Sessões do dia</string>
    <string name="titulo_materias">Matérias</string>
    <string name="proxima_materia">Próxima Matéria</string>
    <string name="chrono_title">CHRONO</string>
    <string name="focus_title">FOCUS</string>
    <string name="seu_nome">Seu nome</string>
    <string name="cadastro">Cadastro</string>
    <string name="dias_da_semana">Dias da semana</string>
    <string name="salvar">Salvar</string>
    <string name="seg">seg</string>
    <string name="ter">ter</string>
    <string name="qua">qua</string>
    <string name="qui">qui</string>
    <string name="sex">sex</string>
    <string name="sab">sáb</string>
    <string name="dom">dom</string>
    <string name="duracao">Duração</string>
    <string name="nome">Nome</string>
</resources>