<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.PerfilActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_voltar"
        android:src="@drawable/ic_arrow_back"
        app:tint="?attr/colorOnBackground" />

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_profile"
        app:tint="?attr/colorOnBackground"
        android:contentDescription="@string/btn_ir_perfil" />

    <TextView
        android:id="@+id/tv_nome_usuario"
        style="@style/TextStyle.BigTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/ola_usuario" />

    <Button
        android:id="@+id/btn_alternar_tema"
        style="@style/ButtonStyle.PrimaryTinyCorner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_alternar_tema" />

</LinearLayout>
