<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SessionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/container_padding"
        android:paddingTop="@dimen/container_padding"
        android:background="?attr/colorSurface">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_voltar"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038"
            app:tint="?attr/colorOnBackground" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle.BigTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.038" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/containerMateriaTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/container_padding">

        <TextView
            android:id="@+id/tvMateria"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Matéria" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="260dp"
            android:layout_height="260dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/timer_circle"
                app:tint="?attr/colorSurfaceVariant" />

            <TextView
                android:id="@+id/tvTimer"
                style="@style/TextStyle.Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_00_00_00" />

        </FrameLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flTimerButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <Button
                android:id="@+id/btn_pause"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/pausar"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_start"
                style="@style/ButtonStyle.Primary"
                android:layout_width="250dp"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/iniciar" />

            <Button
                android:id="@+id/btn_finishPrimary"
                style="@style/ButtonStyle.Primary"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/finalizar"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_finishSecondary"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/finalizar"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_resume"
                style="@style/ButtonStyle.Primary"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/retomar"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_restart"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="@dimen/min_button_height"
                android:layout_marginHorizontal="7sp"
                android:text="@string/reiniciar"
                android:visibility="gone" />

        </com.google.android.flexbox.FlexboxLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_next_materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="@dimen/container_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_next_materia_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvNextSubjectTitle"
                style="@style/TextStyle.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proxima_materia"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_next_materia"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardBackgroundColor="?attr/colorSurfaceVariant">

            <TextView
                android:id="@+id/tvNextSubject"
                style="@style/TextStyle.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/body_padding"
                android:paddingVertical="6dp"
                tools:text="Matéria" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_next_materia_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_nextMateria"
                style="@style/ButtonStyle.PrimaryTinyCorner"
                android:layout_width="@dimen/min_button_width"
                android:layout_height="match_parent"
                android:text="@string/iniciar"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>